# Compliance-Auditor-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.production.yml  main.py  nginx.conf.example  pyproject.toml
app/: main.py
app/data_scan/: pii_field_patterns.py
app/graph/: graph.py  progress.py  state.py
app/graph/nodes/: compliance_mapper.py  github.py  orchestrator.py  osv.py  report_generator.py  scan_cicd_security.py  scan_data_classification.py  scan_iac_config.py  scan_repo_governance.py  scan_sbom_license.py  scan_secrets_pii.py  semgrep.py
app/mapper/: controls.py  rag_mapper.py
app/middleware/: auth.py  rate_limit.py
app/routers/: audit.py
app/utils/: cache.py  config.py  git.py  llm.py
scripts/: embed_documents.py  setup_supabase.sql  test_end_to_end.py  test_tools.py
tests/: conftest.py  test_compliance_mapper_paths.py  test_controls.py  test_github.py  test_graph.py  test_iac_config.py  test_osv.py  test_report_generator.py  test_secrets_pii.py  test_semgrep.py
