[project]
name = "compliance-auditor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi==0.136.3",
    "groq>=1.4.0",
    "httpx==0.28.1",
    "langgraph==1.2.2",
    "pydantic==2.13.4",
    "pymupdf>=1.27.2.3",
    "python-dotenv==1.2.2",
    "sentence-transformers>=5.5.1",
    "supabase==2.30.1",
    "uvicorn[standard]==0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
